# git-dit-wui

./: .travis.yml  Cargo.toml  README.md
src/: error.rs  main.rs  router.rs  util.rs
src/handlers/: issue.rs  message.rs  mod.rs
src/middleware/: cache.rs  handlebars.rs  mod.rs  repository.rs
src/params/extractors/: mod.rs
src/renderer/: body.rs  footer.rs  header.rs  index.rs  issue.rs  issue_list.rs  message.rs  mod.rs  trailer.rs
src/renderer/types/: issue.rs  message.rs  mod.rs  text_block.rs  trailer.rs
src/templates/: base.hbs  issues.hbs
