[package]
name = "git-dit-wui"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]
env_logger    = "0.5"
error-chain   = "0.10"
git2          = "0.6"
gotham        = "0.2"
gotham_derive = "0.2"
handlebars    = "0.32"
hyper         = "0.11"
libgitdit     = "0.4"
log           = "0.4"
mime          = "0.3"
serde         = "1"
serde_derive  = "1"
